--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -27,54 +27,123 @@ body {
     min-height: 600px;
     display: flex;
     flex-direction: column;
+    font-family: 'Rubik', sans-serif;
 
-    justify-content: center;
-  
 }
 
-.container-app{
+.container-app {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 1rem;
 
 }
 
-.search-ip{
-    display: flex;
-    margin-bottom: 2rem;
-    overflow: hidden;
-    border-radius: 4px;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-    input{
-        width: 100%;
-        padding: 1.125rem;
-        border: none;
-        outline: none;
-    }
-    button{
-        outline: none;
-        border: none;
-        background-color: #343434;
+header {
+    padding: 2rem 0;
+    background-image: url('../images/pattern-bg.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+ 
+
+    h3 {
+        text-align: center;
+        font-size: 1.5rem;
+        margin-bottom: 2rem;
         color: #fff;
-        padding: 1.125rem;
-        font-weight: 500;
-        cursor: pointer;
     }
-}
-#map {
-    width: 100%;
-    height: 400px;
+    .search-ip {
+        display: flex;
+        justify-content: center;
+        overflow: hidden;
+        border-radius: 16px;
+
+        max-width: 400px;
+        margin: 0 auto 2rem auto;
+    
+        input {
+            width: 100%;
+            padding: 1.125rem;
+            border: none;
+            outline: none;
+        }
+    
+        button {
+            outline: none;
+            border: none;
+            background-color: hsl(0, 0%, 17%);
+            color: #fff;
+            padding: 1.125rem;
+            font-weight: 500;
+            cursor: pointer;
+        }
+    }
+
+    .result-bar{
+        position: absolute;
+        left: 0;
+        right: 0;
+        max-width: 1000px;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-content: center;
+        padding: 2rem;
+        border-radius: 16px;
+        background-color: #fff;
+        z-index: 500;
+        
+        .result-item{
+            position: relative;
+            &:not(:last-child){
+                &::after{
+                    content: "";
+                    display: inline-flex;
+                    width: 1px;
+                    height: 100%;
+                    background-color: hsl(0, 0%, 59%);
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    margin-right: 1rem;
+                }
+            }
+        
+            span{
+                display: block;
+                font-size: .75rem;
+                color: hsl(0, 0%, 59%);
+                font-weight: 600;
+            }
+            p{
+                margin-top: 1rem;
+                font-size: 1.375rem;
+            }
+        }
+    }
 }
 
-.leaflet-popup-content{
-    h3{
-        font-weight: 600;
-        font-size: 1rem;
+
+
+.app {
+    height: 100%;
+    #map {
+        width: 100%;
+        height: 100%
     }
-    p{
-        margin: 0;
-        padding-top: .5rem;
-        font-size: .875rem;
-    
+
+    .leaflet-popup-content {
+        h3 {
+            font-weight: 600;
+            font-size: 1rem;
+        }
+
+        p {
+            margin: 0;
+            padding-top: .5rem;
+            font-size: .875rem;
+
+        }
     }
 }
