--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -45,7 +45,11 @@ header {
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
- 
+    .container-app{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
     h3 {
         text-align: center;
@@ -60,7 +64,7 @@ header {
         border-radius: 16px;
 
         max-width: 400px;
-        margin: 0 auto 2rem auto;
+        margin: 0 auto 4rem auto;
     
         input {
             width: 100%;
@@ -81,9 +85,6 @@ header {
     }
 
     .result-bar{
-        position: absolute;
-        left: 0;
-        right: 0;
         max-width: 1000px;
         width: 100%;
         display: grid;
@@ -93,7 +94,15 @@ header {
         border-radius: 16px;
         background-color: #fff;
         z-index: 500;
-        
+        position: absolute;
+        bottom: -64px;
+        @media(max-width: 1024px){
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            max-width: 80%;
+            bottom: -200px;
+        }
         .result-item{
             position: relative;
             &:not(:last-child){
@@ -108,6 +117,11 @@ header {
                     right: 0;
                     margin-right: 1rem;
                 }
+                 @media(max-width: 1024px){ 
+                    &::after{
+                        display: none;
+                    }
+                }
             }
         
             span{
@@ -119,6 +133,9 @@ header {
             p{
                 margin-top: 1rem;
                 font-size: 1.375rem;
+                @media(max-width: 1024px){
+                    font-size: 1.125rem;
+                }
             }
         }
     }
