--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -28,6 +28,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: 'Rubik', sans-serif;
+    color: hsl(0, 0%, 17%);
 
 }
 
@@ -45,7 +46,8 @@ header {
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-    .container-app{
+
+    .container-app {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -57,83 +59,119 @@ header {
         margin-bottom: 2rem;
         color: #fff;
     }
-    .search-ip {
-        display: flex;
-        justify-content: center;
-        overflow: hidden;
-        border-radius: 16px;
 
-        max-width: 400px;
+    .search {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
         margin: 0 auto 4rem auto;
-    
-        input {
+
+        @media(max-width: 1024px) {
+            margin: 0 auto 2rem auto;
+        }
+
+        &-input {
             width: 100%;
-            padding: 1.125rem;
-            border: none;
-            outline: none;
+            display: flex;
+            justify-content: center;
+            overflow: hidden;
+            border-radius: 16px;
+            max-width: 400px;
+
+
+            input {
+                width: 100%;
+                padding: 1.125rem;
+                border: none;
+                outline: none;
+            }
+
+            button {
+                outline: none;
+                border: none;
+                background-color: hsl(0, 0%, 17%);
+                color: #fff;
+                padding: 1.125rem;
+                font-weight: 500;
+                cursor: pointer;
+            }
         }
-    
-        button {
-            outline: none;
-            border: none;
-            background-color: hsl(0, 0%, 17%);
-            color: #fff;
-            padding: 1.125rem;
-            font-weight: 500;
-            cursor: pointer;
+
+        output {
+            color: red;
+            margin-top: 1rem;
+            font-size: 1.125rem;
         }
+
     }
 
-    .result-bar{
-        max-width: 1000px;
+    .result-bar {
+        padding: 2rem;
         width: 100%;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         justify-content: center;
-        padding: 2rem;
         border-radius: 16px;
         background-color: #fff;
         z-index: 500;
-        position: absolute;
-        bottom: -64px;
-        @media(max-width: 1024px){
+        margin-bottom: -128px;
+
+        @media(max-width: 1024px) {
             display: flex;
             flex-direction: column;
             align-items: center;
-            max-width: 80%;
-            bottom: -200px;
+            max-width: 350px;
+            margin-bottom: -200px;
         }
-        .result-item{
+
+        .result-item {
             position: relative;
-            &:not(:last-child){
-                &::after{
+            padding: 0 1rem;
+
+            @media(max-width: 1024px) {
+                text-align: center;
+            }
+
+            &:not(:last-child) {
+                @media(max-width: 1024px) {
+                    margin-top: 1rem;
+                }
+
+                &::after {
                     content: "";
                     display: inline-flex;
-                    width: 1px;
-                    height: 100%;
-                    background-color: hsl(0, 0%, 59%);
                     position: absolute;
                     top: 0;
                     right: 0;
-                    margin-right: 1rem;
+                    width: 2px;
+                    height: 100%;
+                    background-color: hsl(0, 0%, 59%);
+                    opacity: 0.3;
+
                 }
-                 @media(max-width: 1024px){ 
-                    &::after{
+
+                @media(max-width: 1024px) {
+                    &::after {
                         display: none;
                     }
                 }
             }
-        
-            span{
+
+            span {
                 display: block;
-                font-size: .75rem;
+                font-size: .875rem;
                 color: hsl(0, 0%, 59%);
                 font-weight: 600;
             }
-            p{
-                margin-top: 1rem;
-                font-size: 1.375rem;
-                @media(max-width: 1024px){
+
+            p {
+                margin-top: .5rem;
+                font-size: 1.5rem;
+                font-weight: 600;
+                color: hsl(0, 0%, 17%);
+
+                @media(max-width: 1024px) {
                     font-size: 1.125rem;
                 }
             }
@@ -145,6 +183,7 @@ header {
 
 .app {
     height: 100%;
+
     #map {
         width: 100%;
         height: 100%
