--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -68,7 +68,7 @@ header {
         margin: 0 auto 4rem auto;
 
         @media(max-width: 1024px) {
-            margin: 0 auto 2rem auto;
+            margin: 0 auto 1.5rem auto;
         }
 
         &-input {
@@ -85,6 +85,7 @@ header {
                 padding: 1.125rem;
                 border: none;
                 outline: none;
+                font-size: 1rem;
             }
 
             button {
@@ -95,8 +96,18 @@ header {
                 padding: 1.125rem;
                 font-weight: 500;
                 cursor: pointer;
+                transition: background .3s ease;
+
+                &:hover {
+                    background-color: hsl(0, 0%, 0%);
+                }
+
             }
+
+
         }
+
+
 
         output {
             color: red;
@@ -122,7 +133,7 @@ header {
             flex-direction: column;
             align-items: center;
             max-width: 350px;
-            margin-bottom: -200px;
+            margin-bottom: -160px;
         }
 
         .result-item {
@@ -133,22 +144,12 @@ header {
                 text-align: center;
             }
 
-            &:not(:last-child) {
+            &+.result-item {
+                border-left: 2px solid hsl(0, 0%, 90%);
+
                 @media(max-width: 1024px) {
                     margin-top: 1rem;
-                }
-
-                &::after {
-                    content: "";
-                    display: inline-flex;
-                    position: absolute;
-                    top: 0;
-                    right: 0;
-                    width: 2px;
-                    height: 100%;
-                    background-color: hsl(0, 0%, 59%);
-                    opacity: 0.3;
-
+                    border-left: none;
                 }
 
                 @media(max-width: 1024px) {
